--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,8 +1,11 @@
 {
-  "name": "<TBD>",
+  "name": "noglinks",
   "main": "src/index.ts",
-  "compatibility_date": "<TBD>",
   "observability": {
     "enabled": true
-  }
+  },
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
+  "compatibility_date": "2024-09-23"
 }
