--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"hono": "^4.7.1"
+		"crypto": "^1.0.1",
+		"hono": "^4.7.2",
+		"jsonwebtoken": "^9.0.2"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20250204.0",
 		"wrangler": "^3.109.1"
 	}
 }
